<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu3">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="124dp"
        android:layout_height="118dp"
        app:srcCompat="@drawable/descarga"
        tools:layout_editor_absoluteX="149dp"
        tools:layout_editor_absoluteY="8dp" />

    <CheckBox
        android:id="@+id/chkentrada"
        android:layout_width="124dp"
        android:layout_height="29dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        android:onClick="mostrarentrada"
        android:text="@string/entrada"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <CheckBox
        android:id="@+id/chkfondo"
        android:onClick="mostrarfondo"
        android:layout_width="124dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fondoo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.823"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.275" />

    <RadioGroup
        android:id="@+id/rbentradagroup"
        android:layout_width="173dp"
        android:layout_height="104dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.338"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.404"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbentrada1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada1" />

        <RadioButton
            android:id="@+id/rbentrada2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/entrada2" />

        <RadioButton
            android:id="@+id/rbentrada3"
            android:layout_width="162dp"
            android:layout_height="42dp"
            android:text="@string/entrada3" />


    </RadioGroup>

    <RadioGroup
        android:id="@+id/rbfondogroup"
        android:layout_width="203dp"
        android:layout_height="101dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929"
        tools:ignore="MissingConstraints">

        <RadioButton
            android:id="@+id/rbfondo1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fondo1" />

        <RadioButton
            android:id="@+id/rbfondo2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fondo2" />

        <RadioButton
            android:id="@+id/rbfondo3"
            android:layout_width="162dp"
            android:layout_height="42dp"
            android:text="@string/fondo3" />


    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:onClick="ordenarmenu"
        android:text="@string/orden"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834" />

    <TextView
        android:id="@+id/txtresultado"
        android:layout_width="328dp"
        android:layout_height="62dp"
        android:layout_marginStart="8dp"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.171"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>